go-gRPC-python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
spec:
  selector:
    matchLabels:
      app: project
  replicas: 1
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: python-server
          image: gcr.io/pro2-so1/python-server:1.0
          ports:
          - containerPort: 50051
        - name: golang-server
          image: gcr.io/pro2-so1/golang-server:1.0
          ports:
          - containerPort: 3000
